modularización de plantillas y scripts En este punto el header y el footer están modularizados, preparado para terminar menú

--- a/web/html/plantillas/header.html
+++ b/web/html/plantillas/header.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light navbar-personalizada">
   <div class="container-fluid">
-    <a class="navbar-brand d-flex align-items-center" href="../../../index.html">
-      <img src="../../../img/logos/raices-viajeras-logo0.webp" alt="RV" style="max-width:56px;" class="me-2">
+    <a class="navbar-brand d-flex align-items-center" href="/Raices-Viajeras/index.html">
+      <img src="/Raices-Viajeras/img/logos/raices-viajeras-logo0.webp" alt="RV" style="max-width:56px;" class="me-2">
       <span>RAÍCES VIAJERAS</span>
     </a>
     <div class="d-flex align-items-center gap-2">
@@ -14,8 +14,11 @@
     <div class="collapse navbar-collapse" id="navMenu">
       <ul class="navbar-nav ms-auto">
         <a class="btn cambiar-tema d-none d-lg-inline" onclick="cambiaModoColor()"><i class="bi bi-moon-fill"></i></a>
-        <li class="nav-item"><a class="nav-link" href="../../../index.html">Inicio</a></li>
-        <li class="nav-item"><a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#modalRegistro">Suscribirse</a></li>
+        <li class="nav-item"><a class="nav-link" href="/Raices-Viajeras/index.html">Inicio</a></li>
+        <li class="nav-item"><a class="nav-link" href="/Raices-Viajeras/web/html/blog.html">Blog</a></li>
+        <li class="nav-item"><a class="nav-link" href="/Raices-Viajeras/web/html/destinos.html"></a></li>
+        <li class="nav-item"><a class="nav-link bi bi-basket-fill" href="/Raices-Viajeras/web/html/paga.html"></a></li>
+        <li class="nav-item"><a class="nav-link" href="/Raices-Viajeras/web/Formulario/form.html">Sign in / Log in</a></li>
       </ul>
     </div>
   </div>
