--- a/index.html
+++ b/index.html
@@ -8,37 +8,17 @@
     <link rel="stylesheet" href="web/css/bootstrap.min.css">
     <link rel="stylesheet" href="web/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-    <script src="web/js/darkTheme.js"></script>
     <link rel="icon" type="image/webp" href="img/logos/raices-viajeras-logo0.webp">
+    <script src="web/js/darkTheme.js"></script>
 </head>
 
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light navbar-personalizada">
-        <div class="container-fluid">
-            <a class="navbar-brand d-flex align-items-center" href="index.html">
-                <img src="img/logos/raices-viajeras-logo0.webp" alt="RV" style="max-width:56px;" class="me-2">
-                <span>RAÍCES VIAJERAS</span>
-            </a>
-            <div class="d-flex align-items-center gap-2">
-                <button class="btn cambiar-tema d-lg-none btn-modo" onclick="cambiaModoColor()"><i class="bi bi-moon-fill"></i></button>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu"
-                    aria-controls="navMenu" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            </div>
-            <div class="collapse navbar-collapse" id="navMenu">
-                <ul class="navbar-nav ms-auto">
-                    <a class="btn cambiar-tema d-none d-lg-inline" onclick="cambiaModoColor()"><i class="bi bi-moon-fill"></i></a>
-                    <li class="nav-item"><a class="nav-link" href="#">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#modalRegistro">Suscribirse</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+<body id="body">
+    <header id="header"></header>
+    <script type="module" src="web/js/plantillas/header.js"></script>
 
     <div class="container-fluid">
         <!-- Encabezado: texto a la izquierda, 4 imágenes a la derecha -->
-        <header class="encabezado">
+        <div class="encabezado">
             <div class="row align-items-center">
                 <div class="col-12 col-lg-7">
                     <h1 class="display-6">CADA VIAJE CON NOSOTROS DEJA HUELLA EN TU MEMORIA, NO EN EL PLANETA</h1>
@@ -58,7 +38,7 @@
                     </div>
                 </div>
             </div>
-        </header>
+        </div>
 
         <!-- Intro (hero inverso): 4 imágenes a la izquierda, texto a la derecha -->
         <section id="formulario" class="encabezado">
@@ -258,10 +238,14 @@
         </div>
     </div>
 
-    <footer class="pie">
+    <!--<footer class="pie">
         <p>&copy; 2026 Raíces Viajeras. Todos los derechos reservados.</p>
     </footer>
     <script src="web/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="web/js/main.js"></script>
+    <script src="https://kit.fontawesome.com/0b95445ffc.js" crossorigin="anonymous"></script>-->
+    <script type="module" src="web/js/plantillas/footer.js">
+    </script><script src="web/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="web/js/main.js"></script>
     <script src="https://kit.fontawesome.com/0b95445ffc.js" crossorigin="anonymous"></script>
 </body>
