--- a/web/html/conocenos.html
+++ b/web/html/conocenos.html
@@ -8,32 +8,13 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-    <script src="../js/darkTheme.js"></script>
     <link rel="icon" type="image/webp" href="../../img/logos/raices-viajeras-logo0.webp">
+    <script src="../js/darkTheme.js"></script>
 </head>
 
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light navbar-personalizada">
-        <div class="container-fluid">
-            <a class="navbar-brand d-flex align-items-center" href="../../index.html">
-                <img src="../../img/logos/raices-viajeras-logo0.webp" alt="RV" style="max-width:56px;" class="me-2">
-                <span>RAÍCES VIAJERAS</span>
-            </a>
-            <div class="d-flex align-items-center gap-2">
-                <button class="btn cambiar-tema d-lg-none btn-modo" onclick="cambiaModoColor()"><i class="bi bi-moon-fill"></i></button>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu" aria-controls="navMenu" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            </div>
-            <div class="collapse navbar-collapse" id="navMenu">
-                <ul class="navbar-nav ms-auto">
-                    <a class="btn cambiar-tema d-none d-lg-inline" onclick="cambiaModoColor()"><i class="bi bi-moon-fill"></i></a>
-                    <li class="nav-item"><a class="nav-link" href="../../index.html">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../../index.html">Suscribirse</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+<body id="body">
+    <header id="header"></header>
+    <script type="module" src="../js/plantillas/header.js"></script>
 
     <div class="container-fluid">
         <section class="py-5">
@@ -55,10 +36,7 @@
         </section>
     </div>
 
-    <footer class="pie">
-        <p>&copy; 2026 Raíces Viajeras. Todos los derechos reservados.</p>
-    </footer>
-
+    <script type="module" src="../js/plantillas/footer.js"></script>
     <script src="../js/bootstrap.bundle.min.js"></script>
     <script type="module" src="../js/main.js"></script>
     <script src="https://kit.fontawesome.com/0b95445ffc.js" crossorigin="anonymous"></script>
