--- a/web/html/paga.html
+++ b/web/html/paga.html
@@ -2,9 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Cesta</title>
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <link rel="icon" type="image/webp" href="../../img/logos/raices-viajeras-logo0.webp">
+    <script src="../js/darkTheme.js"></script>
 </head>
-<body>
+<body id="body">
+    <header id="header"></header>
+    <script src="../js/plantillas/header.js"></script>
 
+    <script type="module" src="../js/plantillas/header.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="../js/main.js"></script>
+    <script src="https://kit.fontawesome.com/0b95445ffc.js" crossorigin="anonymous"></script>
 </body>
 </html>
