--- a/web/html/plantillas/header.html
+++ b/web/html/plantillas/header.html
@@ -5,7 +5,7 @@
       <span>RAÍCES VIAJERAS</span>
     </a>
     <div class="d-flex align-items-center gap-2">
-      <button class="btn cambiar-tema d-lg-none btn-modo" onclick="cambiaModoColor()"><i class="bi bi-moon-fill"></i></button>
+      <button class="btn cambiar-tema d-lg-none btn-modo" onclick="cambiaModoColor()"><i class="bi bi-moon-fill theme-icon"></i></button>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu"
               aria-controls="navMenu" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -13,7 +13,7 @@
     </div>
     <div class="collapse navbar-collapse" id="navMenu">
       <ul class="navbar-nav ms-auto">
-        <a class="btn cambiar-tema d-none d-lg-inline" onclick="cambiaModoColor()"><i class="bi bi-moon-fill"></i></a>
+        <a class="btn cambiar-tema d-none d-lg-inline" onclick="cambiaModoColor()"><i class="bi bi-moon-fill theme-icon"></i></a>
         <li class="nav-item"><a class="nav-link" href="/Raices-Viajeras/index.html">Inicio</a></li>
         <li class="nav-item"><a class="nav-link" href="/Raices-Viajeras/web/html/blog.html">Blog</a></li>
         <li class="nav-item"><a class="nav-link" href="/Raices-Viajeras/web/html/destinos.html"></a></li>
