menu en varias páginas

--- a/web/html/paga.html
+++ b/web/html/paga.html
@@ -13,7 +13,7 @@
     <header id="header"></header>
     <script src="../js/plantillas/header.js"></script>
 
-    <script type="module" src="../js/plantillas/header.js"></script>
+    <script type="module" src="../js/plantillas/footer.js"></script>
     <script src="../js/bootstrap.bundle.min.js"></script>
     <script type="module" src="../js/main.js"></script>
     <script src="https://kit.fontawesome.com/0b95445ffc.js" crossorigin="anonymous"></script>
